# onecrawl-rs

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  onequery.py  run.sh  run_coreperf.sh  run_memprof.sh
docs/journal/: journal.typ  refs.bib  template.typ
docs/skripsi/latex_source/: .gitignore  Excel2LaTeX.xla  LICENSE  README.md  apalike.bst  bab1.tex  bab2.tex  bab3.tex  bab4.tex  bab5.tex  cv.tex  daftar-pustaka.bib  jtetiskripsi.cls  jtetiskripsi.fls  kata-pengantar.tex  lampiran.tex  lembar-pernyataan.tex  metadata.tex  orisinalitas.tex  pengesahan.tex  persetujuan.tex  template-skripsi-blx.bib  template-skripsi.bcf  template-skripsi.docx  template-skripsi.fls  template-skripsi.run.xml  (+1 more)
onecrawl-parser/: .env  Cargo.toml
onecrawl-parser/src/: main.rs
onecrawl-parser/src/parser/: controller.rs  mod.rs
onecrawl-parser/src/parser/worker/: worker.rs
onecrawl-parser/src/util/: env.rs
onecrawl-scouter/: .env  Cargo.toml
onecrawl-scouter/src/: main.rs
onecrawl-util/: Cargo.toml
onecrawl-util/src/: lib.rs
onecrawl-util/src/database/: connection.rs  mod.rs  mongodb.rs
onecrawl-util/src/database/mongodb/crawling/: model.rs
onecrawl-util/src/database/mongodb/page_form/: model.rs
onecrawl-util/src/database/mongodb/page_information/: model.rs
onecrawl-util/src/database/mongodb/page_linking/: model.rs
onecrawl-util/src/database/mongodb/page_list/: model.rs
onecrawl-util/src/database/mongodb/page_scripts/: model.rs
onecrawl-util/src/database/mongodb/page_styles/: model.rs
onecrawl-util/src/database/mongodb/page_tables/: model.rs
(+10 files in other folders)
