[package]
name = "onecrawl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onecrawl-util = {path = "../onecrawl-util"}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.1"
html5ever = "0.26"
url = "2.2.2"
markup5ever_rcdom = "0.2.0"
