[package]
name = "onecrawl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onecrawl-util = {path = "../onecrawl-util"}
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.1"
select = "0.6.0"
regex = "1.10.3"
url = "2.2.2"

[profile.release]
debug = 1
