[package]
name = "onecrawl-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = {version = "2.8.0"}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.1"

[profile.release]
debug = 1
